<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/rl_follow_pos"
        android:layout_width="@dimen/x600"
        android:layout_height="@dimen/y600"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y60">

        <ImageView
            android:id="@+id/iv_men"
            android:layout_width="@dimen/x220"
            android:layout_height="@dimen/y500"
            android:layout_centerInParent="true"
            android:scaleType="centerCrop"
            android:src="@mipmap/bg_men" />

        <CheckBox
            android:id="@+id/cb_chest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/y165"
            android:background="@drawable/test_body_bg_selector"
            android:button="@null"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y5"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y5"
            android:text="@string/chest"
            android:textColor="@color/test_body_text_color_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_chest"
            android:layout_width="@dimen/x210"
            android:layout_height="@dimen/y2"
            android:layout_marginTop="@dimen/y190"
            android:layout_toLeftOf="@id/cb_chest"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cb_arm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y185"
            android:background="@drawable/test_body_bg_selector"
            android:button="@null"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y5"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y5"
            android:text="@string/arm"
            android:textColor="@color/test_body_text_color_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_arm"
            android:layout_width="@dimen/x130"
            android:layout_height="@dimen/y2"
            android:layout_marginTop="@dimen/y210"
            android:layout_toRightOf="@id/cb_arm"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cb_abdomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/y245"
            android:background="@drawable/test_body_bg_selector"
            android:button="@null"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y5"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y5"
            android:text="@string/abdomen"
            android:textColor="@color/test_body_text_color_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_abdomen"
            android:layout_width="@dimen/x230"
            android:layout_height="@dimen/y2"
            android:layout_marginTop="@dimen/y270"
            android:layout_toLeftOf="@id/cb_abdomen"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cb_hips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y285"
            android:background="@drawable/test_body_bg_selector"
            android:button="@null"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y5"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y5"
            android:text="@string/hips"
            android:textColor="@color/test_body_text_color_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_hips"
            android:layout_width="@dimen/x170"
            android:layout_height="@dimen/y2"
            android:layout_marginTop="@dimen/y310"
            android:layout_toRightOf="@id/cb_hips"
            android:background="@color/black" />

        <CheckBox
            android:id="@+id/cb_leg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/y375"
            android:background="@drawable/test_body_bg_selector"
            android:button="@null"
            android:paddingLeft="@dimen/x10"
            android:paddingTop="@dimen/y5"
            android:paddingRight="@dimen/x10"
            android:paddingBottom="@dimen/y5"
            android:text="@string/leg"
            android:textColor="@color/test_body_text_color_selector"
            android:textSize="14sp" />

        <View
            android:id="@+id/line_leg"
            android:layout_width="@dimen/x180"
            android:layout_height="@dimen/y2"
            android:layout_marginTop="@dimen/y400"
            android:layout_toRightOf="@id/cb_leg"
            android:background="@color/black" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_all_select"
        android:layout_width="@dimen/x100"
        android:layout_height="@dimen/y50"
        android:layout_below="@id/rl_follow_pos"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_rectangle_50_corners_white_stroke_gray"
        android:gravity="center"
        android:text="@string/select_all"
        android:textColor="@color/color_38"
        android:textSize="14sp" />


    <Button
        android:id="@+id/btn_next"
        android:layout_width="@dimen/x300"
        android:layout_height="@dimen/y100"
        android:layout_below="@id/tv_all_select"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y120"
        android:layout_marginBottom="@dimen/y20"
        android:background="@drawable/shape_rectangle_50_corners_green"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="17sp" />


</RelativeLayout>